// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tnw-image Default and Required Prop Behavior renders correctly with default values 1`] = `
<tnw-image alt="Default Image" class="tnw-image tnw-image--height-undefined tnw-image--width-full" src="image.jpg">
  <template shadowrootmode="open">
    <img alt="Default Image" class="rounded-default tnw-image tnw-image--full" loading="eager" part="image" src="image.jpg">
  </template>
</tnw-image>
`;

exports[`tnw-image Default and Required Prop Behavior renders correctly with link 1`] = `
<tnw-image alt="Default Image" class="tnw-image tnw-image--height-undefined tnw-image--width-full" link="/" src="image.jpg">
  <template shadowrootmode="open">
    <a aria-label="Default Image" href="/" style="display: inline-flex; align-items: center;">
      <img alt="Default Image" class="rounded-default tnw-image tnw-image--full" loading="eager" part="image" src="image.jpg">
    </a>
  </template>
</tnw-image>
`;
